feat: 优化知识库目录结构
Co-authored-by: traeagent <traeagent@users.noreply.github.com>